test/compile_errors/err_numeric_separator_before_suffix.w
//! expect-error: numeric separator '_' may not precede the type suffix

fn main:
    let _ = 1_000_u64
